# technopark-algo

./: .gitignore  CMakeLists.txt  README.md
1m/: 1.cpp  1_star.cpp  2.cpp  2_star.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp
2m/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp
2m/tests/2/: generate.py
2m/tests/6/: generate.py
3m/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
3m/tests/1/: generate.py
