cmake_minimum_required(VERSION 3.6)
project(technopark_algo)

set(CMAKE_CXX_STANDARD 11)

add_executable(1m_1 1m/1.cpp)
add_executable(1m_2 1m/2.cpp)
add_executable(1m_3 1m/3.cpp)
add_executable(1m_4 1m/4.cpp)
add_executable(1m_5 1m/5.cpp)
add_executable(1m_6 1m/6.cpp)
add_executable(1m_7 1m/7.cpp)

add_executable(2m_1 2m/1.cpp)
add_executable(2m_2 2m/2.cpp)
add_executable(2m_3 2m/3.cpp)
add_executable(2m_4 2m/4.cpp)
add_executable(2m_5 2m/5.cpp)
add_executable(2m_6 2m/6.cpp)
add_executable(2m_7 2m/7.cpp)
